# rust-kafka-playground

./: .env  README.md  docker-compose.yml
consumer/: Cargo.toml  Dockerfile
consumer/src/: main.rs
rest-api/: Cargo.toml  Dockerfile
rest-api/migrations/: 20230712000000_create_name_table.sql  20230712000001_drop_name_table.sql
rest-api/src/: main.rs
