[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.36.2", features = ["tokio"] }
tokio = { version = "1.38.0", features = ["full"] }
log = { version = "0.4.22" }
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "time", "uuid"] }
poem = { version = "3.0.1" }
anyhow = { version = "1.0.86" }
env_logger = { version = "0.11.3" }
